cmake_minimum_required(VERSION 3.28)
project(untitled2 C)

set(CMAKE_C_STANDARD 23)

add_executable(untitled2 main.c

)

add_executable(test test.c
)
add_executable(var var.c
)
add_executable(var2 var2.c)

add_executable(net net.c)

add_executable(array array.c)

add_executable(string string.c)

add_executable(string2 string2.c)

add_executable(string3 string3.c)

add_executable(if if.c)

add_executable(if2 if2.c)

add_executable(for for.c)

add_executable(while while.c)

add_executable(do_while do_while.c)

add_executable(for2 for2.c)

add_executable(for3 for3.c)

add_executable(for4 for4.c)